# alphapeptdeep

./: .bumpversion.cfg  .bumpversion.toml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  HISTORY.md  MANIFEST.in  Makefile  README.md  pyproject.toml  settings.ini  setup.py
.github/: release.yml
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: _run_tests.yml  branch-checks.yaml  bump_version.yml  code_review.yml  create_release.yml  github_action_test_dummy.yml  pip_installation.yml  publish_and_release.yml  publish_docker_image.yml  publish_on_pypi.yml  release_installer.yml  release_installers.yml
_docs/: index.html  pipeline_api.html  pretrained_models.html  robots.txt  search.json  settings.html  sitemap.xml  test_ui.html  utils.html
_docs/mass_spec/: mass_calibration.html  mass_spec.mass_calibration.html  mass_spec.match.html  mass_spec.ms_reader.html  match.html
_docs/model/: ccs.html  model.building_block.html  model.ccs.html  model.featurize.html  model.generic_property_prediction.html  model.model_interface.html  model.model_shop.html  model.ms2.html  model.rt.html  ms2.html  test_predict_mp.html
_docs/protein/: fasta.html  protein.fasta.html
_docs/psm_frag_reader/: maxquant_frag_reader.html  psm_frag_reader.library_frag_reader.html  psm_frag_reader.maxquant_frag_reader.html  psm_frag_reader.psm_frag_reader.html  psm_frag_reader.psmlabel_reader.html  psmlabel_reader.html
_docs/rescore/: fdr.html  percolator.html  rescore.fdr.html  rescore.feature_extractor.html  rescore.percolator.html
_docs/spec_lib/: predict_lib.html  spec_lib.library_factory.html  spec_lib.predict_lib.html  spec_lib.translate.html  test_translate_tsv.html
alphadeep/: __init__.py  _nbdev.py  _settings.py  _utils.py  cli.py  installed_models.py  pretrain_models.py  pretrained_models.py  settings.py  utils.py
alphadeep/constants/: default_settings.yaml  model_const.yaml
alphadeep/mass_spec/: match.py  ms_reader.py
alphadeep/model/: CCS.py  RT.py  base.py  building_block.py  ccs.py  featurize.py  ms2.py  msms.py  msms_param_search.py  rt.py
alphadeep/protein/: fasta.py  inference.py
alphadeep/psm_frag_reader/: maxquant_frag_reader.py  psm_frag_reader.py  psmlabel_reader.py
alphadeep/psm_reader/: alphapept_reader.py  dia_search_reader.py  maxquant_reader.py  msfragger_reader.py  pfind_reader.py  psm_reader.py  spectronaut_reader.py
alphadeep/reader/: alphapept_reader.py  maxquant_reader.py  msfragger_reader.py  pfind_reader.py  psm_reader.py  raw_reader.py  spectronaut_reader.py
alphadeep/rescore/: ML_score.py  fdr.py  feature_extractor.py  percolator.py
alphadeep/spec_lib/: predict_lib.py  translate.py
alphadeep/speclib/: lib_base.py  predict_lib.py  translate.py
docs/: _config.yml  build_docs.sh  building_block.html  ccs.html  conf.py  fasta.html  fdr.html  feature_extractor.html  featurize.html  generic_property_prediction.html  index.html  index.rst  library_factory.html  library_frag_reader.html  mass_calibration.html  match.html  maxquant_frag_reader.html  model_interface.html  model_shop.html  module_pipeline_api.rst  module_pretrained_models.rst  module_settings.rst  modules_mass_spec.rst  modules_model.rst  modules_protein.rst  modules_rescore.rst  modules_spec_lib.rst  ms2.html  ms_reader.html  notebooks.rst  percolator.html  pipeline_api.html  predict_lib.html  pretrained_models.html  psm_frag_reader.html  psmlabel_reader.html  rt.html  search.json  settings.html  sidebar.json  (+6 more)
docs/_data/: topnav.yml
docs/mass_spec/: mass_calibration.html  mass_calibration.rst  match.html  match.rst  ms_reader.html  ms_reader.rst
docs/model/: building_block.html  building_block.rst  ccs.html  ccs.rst  featurize.html  featurize.rst  generic_property_prediction.html  generic_property_prediction.rst  model_interface.html  model_interface.rst  model_shop.html  ms2.html  ms2.rst  rt.html  rt.rst
docs/nbs/: alphapeptdeep_hdf_to_tsv.ipynb  tutorial.ipynb  (+6 more)
misc/: bumpversion.cfg  check_version.sh  checklist.txt  conda_dev_env.yaml  get_version.sh  loose_pip_install.sh  pip_install.sh  stable_pip_install.sh
nbdev_nbs/: .gitignore  _quarto.yml  _settings.ipynb  _utils.ipynb  index.ipynb  installed_models.ipynb  nbdev.yml  pipeline_api.ipynb  pretrain_models.ipynb  pretrained_models.ipynb  settings.ipynb  sidebar.yml  test_ui.ipynb  utils.ipynb
nbs/: HLA_peptide_prediction.ipynb  README.md  alphapeptdeep_hdf_to_tsv.ipynb  diann_lib.ipynb  fasta_lib.ipynb  speclib_from_dda.ipynb  test_ccs_rt.ipynb  test_predict_mp.ipynb  test_transfer_api.ipynb  turorial.ipynb  tutorial.ipynb  tutorial_building_ccs_model.ipynb  tutorial_building_rt_model.ipynb  tutorial_model_manager.ipynb  tutorial_speclib_from_fasta.ipynb
nbs_tests/: .gitignore  Test BertEncoderUpdate.ipynb  pipeline_api.ipynb  pretrained_models.ipynb  test_argparse.ipynb  test_ccs_rt.ipynb  test_fasta_lib_cpu_mp.ipynb  test_fasta_lib_precursor_lib.ipynb  test_ms_reader.ipynb  test_multi_target.ipynb  test_percolator.ipynb  test_rescore_api.ipynb  test_torch_jit.ipynb  test_transfer_api.ipynb  utils.ipynb
nbs_trials/: adapt_charged_fragtypes.ipynb  precursor_table.csv  speclib_from_dda.ipynb  test_argparse.ipynb  test_ccs_rt.ipynb  test_charge_model.ipynb  test_fasta_lib_gpu.ipynb  test_fasta_lib_precursor_lib.ipynb  test_multi_target.ipynb  test_new_ms2_weight_format.ipynb  test_percolator.ipynb  test_predict_ms2.ipynb  test_predict_ms2_mp.ipynb  test_smiles_features.ipynb  test_transfer_ms2.ipynb
peptdeep/: __init__.py  _modidx.py  _nbdev.py  alphatims_wrapper.py  cli.py  cli_argparse.py  gui.py  pipeline_api.py  pretrained_models.py  settings.py  utils.py
requirements/: development-stable.txt  gui-stable.txt  gui.txt  requirements.txt  requirements_development.txt  requirements_development_loose.txt  requirements_docs.txt  requirements_gui.txt  requirements_gui_loose.txt  requirements_hla.txt  requirements_loose.txt  requirements_tests.txt
tests/: run_tests.sh  test_cli.py  test_cmd_flow.sh  test_gui.py  test_requirements.py
(+208 files in other folders)
