[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "peptdeep"
requires-python = ">=3.8.0"
dynamic = ["version", "dependencies", "optional-dependencies"]

authors = [
    {name = "Mann Labs", email = "jalew.zwf@qq.com"}
]
description = "The AlphaX deep learning framework for Proteomics"
readme = "README.md"
keywords = [
    "mass spectrometry",
    "proteomics",
    "search engine",
    "DIA",
    "data-independent acquisition",
    "bioinformatics",
    "AlphaPept",
    "AlphaPept ecosystem",
    "deep learning",
    "AlphaX ecosystem",
]
license = {file = "LICENSE.txt"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    # "Development Status :: 6 - Mature",
    # "Development Status :: 7 - Inactive"
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]

"Paper preprint" = "https://www.biochem.mpg.de/mann"
Repository = "https://github.com/MannLabs/peptdeep"
#Documentation = "https://readthedocs.org"
#Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
Issues = "https://github.com/MannLabs/peptdeep/issues"
"Mann Labs Homepage" = "https://www.biochem.mpg.de/mann"
Docs = "https://alphapeptdeep.readthedocs.io/en/latest/"
PyPi = "https://pypi.org/project/peptdeep/"

[tool.setuptools.packages]
find = {}

[tool.setuptools.dynamic]
# https://stackoverflow.com/a/73600610
dependencies = {file = ["requirements/requirements_loose.txt"]}
optional-dependencies.stable = { file = ["requirements/requirements.txt"] }
optional-dependencies.gui = { file = [ "requirements/requirements_gui_loose.txt"] }
optional-dependencies.gui-stable = { file = [ "requirements/requirements_gui.txt"] }
optional-dependencies.hla = { file = ["requirements/requirements_hla_loose.txt"] }
optional-dependencies.hla-stable = { file = ["requirements/requirements_hla.txt"] }
optional-dependencies.docs = { file = ["requirements/requirements_docs.txt"] }
optional-dependencies.tests = { file = ["requirements/requirements_tests.txt"] }
optional-dependencies.development = { file = [
    "requirements/requirements_development.txt",
    "requirements/requirements_docs.txt",
    "requirements/requirements_tests.txt"] }

version = {attr = "peptdeep.__version__"}

[project.scripts]
peptdeep = "peptdeep.cli:run"

[tool.ruff.lint]
select = ["E", "F"]
ignore = [
    "E501"  # Line too long  (ruff wraps code, but not docstrings)
]
